--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -6,7 +6,7 @@ output:
   BiocStyle::html_document:
     toc: false
 vignette: >
-  %\VignetteIndexEntry{Example_CLL}
+  %\VignetteIndexEntry{Example_scMT}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -23,7 +23,7 @@ Briefly, the data set consists of 87 mouse embryonic stem cells (mESCs), compris
 # Load data and create MOFA object
 The data is stored as a `MultiAssayExperiment` object.
 Notice that there are 4 views, one with normalized RNA expression assay and 3 views with DNA methylation information. Each DNA methylation view is a different genomic context (i.e. Enhancers, Promoters and CpG Islands) and each feature is an individual CpG site.
-```{r, message=FALSE}
+```{r, warning=FALSE, message=FALSE}
 library(MOFAtools)
 library(ggplot2)
 ```
