added doc to FSEA and adapted vignettes

--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -143,7 +143,7 @@ Part 2: Characterisation of individual factors:
 For details, please read the Methods section of the Manuscript.
 
 ## Part 1: Disentangling the heterogeneity, calculation of variance explained by each factor in each view
-This is done by the 'plotVarianceExplained' function. The resulting plot allows to get an overivew of which factors are active in which view(s). If a factor is active in more than one view, this means that is capturing shared signal (co-variation) between features of the different views.
+This is done by the `plotVarianceExplained` function. The resulting plot allows to get an overivew of which factors are active in which view(s). If a factor is active in more than one view, this means that is capturing shared signal (co-variation) between features of the different views.
 
 ```{r}
 r2 <- calculateVarianceExplained(MOFAobject)
@@ -152,7 +152,7 @@ plotVarianceExplained(MOFAobject)
 
 ## Part 2: Characterisation of individual factors
 ### Inspection of top weighted features in the active views
-To get an overview of the weights across all factors in a given view you can use the 'plotWeightsHeatmap' function.
+To get an overview of the weights across all factors in a given view you can use the `plotWeightsHeatmap` function.
 For example, here we plot all weights from all factors in the Mutation data:
 ```{r}
 plotWeightsHeatmap(MOFAobject, "Mutations", factors=1:5, show_colnames=F)
@@ -184,7 +184,7 @@ Sometimes looking at the loadings of single features can be challenging, and oft
 
 Here we implemented a function for feature set enrichment analysis method (FeatureSetEnrichmentAnalysis) derived from the [PCGSE package](https://cran.r-project.org/web/packages/PCGSE/index.html).
 
-The input of this function is a MOFA trained model (MOFAmodel), the factors for which to perform feature set enrichment (a character vector), the feature sets (a binary matrix) and a set of options regarding how the analysis should be performed, see also documentation of 'FeatureSetEnrichmentAnalysis'
+The input of this function is a MOFA trained model (MOFAmodel), the factors for which to perform feature set enrichment (a character vector), the feature sets (a binary matrix) and a set of options regarding how the analysis should be performed, see also documentation of `FeatureSetEnrichmentAnalysis`
 
 We illustrate the use of this function using the [reactome](http://reactome.org) annotations.
 ```{r}
@@ -213,23 +213,23 @@ for (factor in interestingFactors) {
 
 ## Ordination of samples by factors to reveal clusters and graadients in the sample space
 
-Samples can be visualized along factors of interest using the 'FactorsScatterPlot' function.
+Samples can be visualized along factors of interest using the `FactorsScatterPlot` function.
 ```{r}
 plotFactorScatter(MOFAobject, factors = 1:2, color_by = "IGHV", shape_by = "trisomy12")
 ```
 
-An overview of pair-wise sctterplots for all or a subset of factors is produced by the 'FactorsScatterPairs' function
+An overview of pair-wise sctterplots for all or a subset of factors is produced by the `FactorsScatterPairs` function
 ```{r}
 plotFactorScatters(MOFAobject, factors = 1:4, color_by = "IGHV")
 ```
 
-A single factor can be visualised using the 'FactorBeeswarmPlot' function
+A single factor can be visualised using the `FactorBeeswarmPlot` function
 ```{r}
 plotFactorBeeswarm(MOFAobject, factors = 1, color_by = "IGHV")
 ```
 
 ## Customized analysis
-For customized exploration of weights and factors, you can directly fetch the variables from the model using 'get' functions: 'getWeights', 'getFactors' and 'getTrainData':
+For customized exploration of weights and factors, you can directly fetch the variables from the model using 'get' functions: `getWeights`, `getFactors` and `getTrainData`:
 ```{r}
 MOFAweights <- getWeights(MOFAobject, views="all", factors="all", as.data.frame = T)
 head(MOFAweights)
@@ -249,23 +249,23 @@ head(MOFAdata)
 # Further functionalities 
 
 ## Prediction of views
-With the 'predict' function, full views can be predicted based on the MOFA model with all or a subset of factors
+With the `predict` function, full views can be predicted based on the MOFA model with all or a subset of factors
 ```{r}
 predictedDrugs <- predict(MOFAobject, view="Drugs", factors="all")
 ```
 
 ## Imputation of missing observations
-With the 'imputeMissing' function all missing values are imputed based on the MOFA model. The imputed data is then stored in the ImputedData slot of the MOFAobject and can be accessed via the 'getImputedData' function.
+With the 'imputeMissing' function all missing values are imputed based on the MOFA model. The imputed data is then stored in the ImputedData slot of the MOFAobject and can be accessed via the `getImputedData` function.
 ```{r}
 MOFAobject <- imputeMissing(MOFAobject)
 imputedDrugs <- getImputedData(MOFAobject, view="Drugs")
 ```
 
 ## Clustering of samples based on latent factors
-Samples can be clustered according to their values on some or all latent factors using the 'clusterSamples' function. CLusters can for example be visualised using the FactorsScatterPlot function
+Samples can be clustered according to their values on some or all latent factors using the `clusterSamples` function. Clusters can for example be visualised using the FactorsScatterPlot function
 ```{r}
-h <- clusterSamples(MOFAobject, k=2, factors=1)
-plotFactorScatters(MOFAobject, factors=1:2, color_by=h$cluster)
+clusters <- clusterSamples(MOFAobject, k=2, factors=1)
+plotFactorScatters(MOFAobject, factors=1:2, color_by=clusters)
 ```
 
 
