--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -320,13 +320,13 @@ imputedMethylation[1:5,1:5]
 Samples can be clustered according to their values on the latent factors using the `clusterSamples` function.
 ```{r, message=FALSE}
 # Hierarchical clustering with K=2 using Factor 1
-h <- clusterSamples(MOFAobject, k=2, factors=1)
+clusters <- clusterSamples(MOFAobject, k=2, factors=1)
 
 # Scatterplot colored by the predicted cluster labels and shaped by the true culture conditions
 plotFactorScatter(
   object = MOFAobject,
   factors = 1:2,
-  color_by = h$cluster,
+  color_by = clusters,
   shape_by = "culture"
 )
 ```
